修改react-grid-layout不刷新问题

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build-example": "make build-example",
     "view-example": "make view-example",
     "dev": "make dev",
+    "dev-min": "webpack-dev-server --config webpack-dev-server.config.js",
+    "build-min": "npx babel --out-dir ./build ./lib",
     "prepublishOnly": "make build",
     "validate": "npm ls",
     "flow": "flow"
